m5-boostrap ejercicio2 finalizado

--- a/M5-BOOTSTRAP/M1/ejercicio2.html
+++ b/M5-BOOTSTRAP/M1/ejercicio2.html
@@ -12,21 +12,53 @@
 
     <main>
         <h1>
-            Somos 100% digitales
+            Por qué elegirnos
         </h1>
 
         <section>
             <div class="caja">
                 <div class="cuadro">
-                    <img src="Recursos/Ejercicio 2/Becas.png" alt="">
+                    <img src="Recursos/Ejercicio 2/ProgramasInternacionales.png" alt="">
                     <div>
-                        <p>tramites online</p>
+                        <h2>Programas internacionales</h2>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
 
             </div>
 
+            <div class="caja">
+                <div class="cuadro">
+                    <img src="Recursos/Ejercicio 2/ParcticasProfesionales.png" alt="">
+                    <div>
+                        <h2>Practicas profesionales</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="caja">
+                <div class="cuadro">
+                    <img src="Recursos/Ejercicio 2/Becas.png" alt="">
+                    <div>
+                        <h2>Nuestras becas</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="caja">
+                <div class="cuadro">
+                    <img src="Recursos/Ejercicio 2/CampusVirtual.png" alt="">
+                    <div>
+                        <h2>Campus virtual</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+
+            </div>
 
 
         </section>
